--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,15 @@
 __pycache__/
 *.py[cod]
-/output/
-/input/
-!/input/example.png
-/models/
-/temp/
-/custom_nodes/
-!custom_nodes/example_node.py.example
+output/
+input/
+models/
+temp/
 extra_model_paths.yaml
-/.vs
+.vs/
 .vscode/
 .idea/
-venv/
-/web/extensions/*
-!/web/extensions/logging.js.example
-!/web/extensions/core/
-/tests-ui/data/object_info.json
-/user/
+./venv/
+./tests-ui/data/object_info.json
+./user/
 *.log
 web_custom_versions/
